{
    "name": "InteractionControls",
    "maps": [
        {
            "name": "Interaction",
            "id": "1920ea07-91c3-4292-b3f8-ae4e5ff73ec1",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a8e1ca65-1fa6-4dd8-933e-70bff4accaca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LMB",
                    "type": "Button",
                    "id": "387a7916-b307-4080-9bc0-11e5a546573e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RMB",
                    "type": "Button",
                    "id": "04b1b73e-bc6a-42fe-84e9-be0fa3e8a427",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "011e70e8-5862-45e6-96bb-2d7302ede9d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dialog",
                    "type": "Button",
                    "id": "204aa7e3-0b51-4a80-9093-60bf9513ce6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "88545ddb-dac6-4bd4-89fe-ea25fdd800b6",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ca05f54-c14f-43f0-9eb5-3aaad00926bf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bcfea28-d815-4615-84af-a60fc8e9cf9b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RMB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2bf165e-8426-483a-bd75-9e348e8504ef",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98769b3c-550b-4921-a80d-5b35ab3f6722",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}